--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -30,7 +30,6 @@ $font-accent: 'Noto Serif', serif;
 @mixin scrollbar {
   &::-webkit-scrollbar {
     width: 5px !important;
-    height: 6px !important
   }
   &::-webkit-scrollbar-thumb {
     background-color: $drank-blue !important
@@ -108,6 +107,21 @@ a {
   }
   &_item.active {
     font-family: $font-accent;
+  }
+}
+
+.wear {
+  &_caption {
+    h2 {
+      max-width: 200px;
+      font-size: 16px;
+      font-style: italic;
+      margin: none;
+    }
+    p {
+      max-width: 200px;
+      margin: none
+    }
   }
 }
 
