--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -2,13 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,700');
 
 
-$drank-blue: #0B89FF;
-$drank-blue-invert: #fff;
+//$kbd: #344B50;
+$kbd: #FF7E30;
+$kbd-invert: #fff;
+$kbd-bg: #E9E6E6;
 
-$primary: $drank-blue;
-$primary-invert: $drank-blue-invert;
-$body-color: #000000;
-$black: #000000;
+$primary: $kbd;
+$primary-invert: $kbd-invert;
+$body-color: #503934;
 $tablet-width: 768px;
 $desktop-width: 1024px;
 $font-body: 'Roboto',
@@ -28,18 +29,27 @@ serif;
   }
 }
 
+@mixin tabletUp {
+  @media (min-width: #{$tablet-width}) {
+    @content;
+  }
+}
+
+
 @mixin scrollbar {
   &::-webkit-scrollbar {
     width: 5px !important;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: $drank-blue !important
+    background-color: $kbd !important
   }
 }
 
 html {
   font-family: $font-body;
+  color: $body-color;
+  background-color: $kbd-bg;
 
   body {
     margin: 0
@@ -48,31 +58,33 @@ html {
 
 a {
   text-decoration: none;
-  color: $black;
+  color: $body-color;
 
   &:visited {
-    color: $black
+    color: $body-color
   }
 
   &:hover {
-    color: $drank-blue
+    color: $kbd
   }
 }
 
 button {
   cursor: pointer;
-  font-family: $font-accent;
+  font-family: $font-body;
+  font-weight: 700;
+  font-style: italic;
   font-size: 18px;
-  background-color: $drank-blue;
-  color: $drank-blue-invert;
-  border: 1px solid $drank-blue;
+  background-color: $kbd;
+  color: $kbd-invert;
+  border: 1px solid $kbd;
   padding: 6px 24px;
   border-radius: 6px;
   transition: all .15s ease;
 
   &:hover {
-    background-color: $drank-blue-invert;
-    color: $drank-blue
+    background-color: $kbd-invert;
+    color: $kbd
   }
 }
 
@@ -91,12 +103,7 @@ button {
   margin: 32px;
   justify-content: center;
 
-  @include tablet() {
-    flex-direction: row;
-    display: flex;
-  }
-
-  @include desktop() {
+  @include tabletUp() {
     flex-direction: row;
     display: flex;
   }
@@ -113,19 +120,7 @@ button {
     flex: 1 1 0;
   }
 
-  @include tablet() {
-    margin-top: 0;
-
-    section {
-      max-height: 100vh;
-      overflow-y: auto;
-      margin: 0 16px;
-      flex: 1 1 0;
-      @include scrollbar()
-    }
-  }
-
-  @include desktop() {
+  @include tabletUp() {
     margin-top: 0;
 
     section {
@@ -148,16 +143,11 @@ button {
   }
 
   &_logo {
-    max-width: 150px;
-    padding: 16px;
+    padding: 32px;
+    max-width: 100px;
 
-    @include tablet() {
-      max-width: 300px;
-      padding: 0;
-    }
-
-    @include desktop() {
-      max-width: 300px;
+    @include tabletUp() {
+      max-width: 130px;
       padding: 0;
     }
   }
@@ -168,11 +158,7 @@ button {
     display: flex;
     flex-direction: column-reverse;
 
-    @include tablet() {
-      flex-direction: row;
-    }
-
-    @include desktop() {
+    @include tabletUp() {
       flex-direction: row;
     }
   }
@@ -180,19 +166,17 @@ button {
   &_menu {
     display: flex;
     width: 100vw;
+    margin-top: -32px;
+    background-color: white;
 
-    @include tablet() {
+    @include tabletUp() {
       width: 70px;
       margin-left: 16px;
       align-items: flex-end;
       text-align: left;
-    }
-
-    @include desktop() {
-      width: 70px;
-      margin-left: 16px;
-      align-items: flex-end;
-      text-align: left;
+      background-color: unset;
+      margin-top: 0;
+      background-color: $kbd-bg;
     }
 
     div {
@@ -200,15 +184,10 @@ button {
       flex-direction: row;
       width: 100%;
       justify-content: space-evenly;
-      padding: 0 16px 16px 16px;
+      padding: 16px;
       flex-wrap: wrap;
 
-      @include tablet() {
-        flex-direction: column;
-        padding: 0;
-      }
-
-      @include desktop() {
+      @include tabletUp() {
         flex-direction: column;
         padding: 0;
       }
@@ -216,23 +195,31 @@ button {
   }
 
   &_item {
-    margin: 8px;
+    margin: 4px 8px;
     font-size: 18px;
+
+    &:last-child {
+      margin-right: 0
+    }
+
+    &:first-child {
+      margin-left: 0
+    }
+
+    @include tabletUp() {
+      &:last-child {
+        margin-right: 8px
+      }
+
+      &:first-child {
+        margin-left: 8px
+      }
+    }
   }
 
   &_item.active {
     font-weight: 700;
-    color: $drank-blue;
-
-    @include tablet () {
-      font-family: $font-accent;
-      color: $black
-    }
-
-    @include desktop() {
-      font-family: $font-accent;
-      color: $black
-    }
+    color: $kbd;
   }
 }
 
